@@ -68,7 +68,7 @@ Display help message.
 
 .TP
 \fIDIRECTORY\fR
-The full path name to the directory. Wild cards are allowed, but only for the trailing part of the path. If this parameter is relative, it is assumed to be relative to the "My Documents" folder. Similarly, if this parameter is omitted, the contents of the "My Documents" folder is listed.
+The full path name to the directory. Wild cards are allowed, but only for the trailing part of the path, and should be protected from the shell. If this parameter is relative, it is assumed to be relative to the "My Documents" folder. Similarly, if this parameter is omitted, the contents of the "My Documents" folder is listed.
 
 .SH "AUTHOR"
 .PP
